--- a/starter-code/front-end/src/app/artists/artist-edit/artist-edit.component.html
+++ b/starter-code/front-end/src/app/artists/artist-edit/artist-edit.component.html
@@ -16,5 +16,5 @@
   <label for="home_address">Home Address:</label>
   <input name="home_address" [(ngModel)]="updatedArtist.home_address">
 
-  <input type="submit" value="Update">
+  <input class="btn btn-success" type="submit" value="Update">
 </form>
