--- a/starter-code/front-end/src/app/managers/manager-index/manager-index.component.html
+++ b/starter-code/front-end/src/app/managers/manager-index/manager-index.component.html
@@ -22,6 +22,9 @@
         <h3>{{manager.cell_phone_number}}</h3>
       </li>
       <li>
+        <h3><a href="{{manager.ad.url}}">THIS IS A SWEET AD</a></h3>
+      </li>
+      <li>
         <a routerLink="/managers/edit/{{manager.id}}">
           Edit
         </a>
