--- a/starter-code/front-end/src/app/app.component.html
+++ b/starter-code/front-end/src/app/app.component.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <header>
-    <nav>
+    <nav class="container">
       <ul>
         <li><a routerLink="/">Tun.r</a></li>
         <li><a routerLink="/about">About</a></li>
