--- a/starter-code/front-end/src/app/artists/artist-index/artist-index.component.html
+++ b/starter-code/front-end/src/app/artists/artist-index/artist-index.component.html
@@ -1,6 +1,6 @@
 <h2>Artists</h2>
 
-<a class="btn" routerLink="/artists/new">Add Artist</a>
+<a class="btn btn-primary" routerLink="/artists/new">Add Artist</a>
 
 <div class="artists">
   <div class="row" *ngFor="let artist of allArtists">
@@ -15,12 +15,12 @@
       </li>
       <li>
         <a routerLink="/artists/edit/{{artist.id}}">
-          Edit
+          <button class="btn btn-warning">Edit</button>
         </a>
       </li>
       <li>
         <form (ngSubmit)="deleteArtist(artist)">
-          <input type="submit" value="Delete"/>
+          <input class="btn btn-danger" type="submit" value="Delete"/>
         </form>
       </li>
     </ul>
